--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             <p>Jak si přejete Bohemia Booster stáhnout?</p>
            
             <div class="options">
-                <a href="https://github.com" class="opt-btn">
+                <a href="https://github.com/herencz1-creator/BohemiaBooster" class="opt-btn">
                     GitHub Repository
                     <span>Oficiální zdroj na GitHubu</span>
                 </a>
-                <a href="https://github.com/latest" class="opt-btn">
+                <a href="https://release-assets.githubusercontent.com/github-production-release-asset/1164967088/601bbef6-0e33-4c9b-8c05-20880f6b099c?sp=r&sv=2018-11-09&sr=b&spr=https&se=2026-02-23T18%3A30%3A08Z&rscd=attachment%3B+filename%3DBohemia-booster.exe&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2026-02-23T17%3A29%3A17Z&ske=2026-02-23T18%3A30%3A08Z&sks=b&skv=2018-11-09&sig=sHgOFtJGNDTuXDzBbmroPuz3DaHeJ56y2ixyS58xWOo%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc3MTg3MDQ0MywibmJmIjoxNzcxODY4NjQzLCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.jt7iesiqoh1hg-SlfxGN9bRxQ-mN9IW55b0csK8GxII&response-content-disposition=attachment%3B%20filename%3DBohemia-booster.exe&response-content-type=application%2Foctet-stream" class="opt-btn">
                     Klasický EXE soubor
                     <span>Přímé stažení nejnovější verze</span>
                 </a>
@@ -171,3 +171,4 @@
 
 </body>
 </html>
+
